--- a/backend/Dockerfile.persistenceagent
+++ b/backend/Dockerfile.persistenceagent
@@ -14,25 +14,29 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-FROM golang:1.17.6-alpine3.15 as builder
+FROM registry.redhat.io/ubi8/go-toolset:1.17 as builder
+
+USER root 
 
 WORKDIR /go/src/github.com/kubeflow/pipelines
 COPY . .
 
 # Needed musl-dev for github.com/mattn/go-sqlite3
-RUN apk update && apk upgrade && \
-    apk add --no-cache bash git openssh gcc musl-dev
+RUN dnf update -y && \
+    dnf install -y bash git openssh gcc
 
 RUN GO111MODULE=on go build -o /bin/persistence_agent backend/src/agent/persistence/*.go
+
+ENV GOPATH /go 
 # Check licenses and comply with license terms.
 RUN ./hack/install-go-licenses.sh
 # First, make sure there's no forbidden license.
-RUN go-licenses check ./backend/src/agent/persistence
-RUN go-licenses csv ./backend/src/agent/persistence > /tmp/licenses.csv && \
+RUN /go/bin/go-licenses check ./backend/src/agent/persistence
+RUN /go/bin/go-licenses csv ./backend/src/agent/persistence > /tmp/licenses.csv && \
     diff /tmp/licenses.csv backend/third_party_licenses/persistence_agent.csv && \
-    go-licenses save ./backend/src/agent/persistence --save_path /tmp/NOTICES
+    /go/bin/go-licenses save ./backend/src/agent/persistence --save_path /tmp/NOTICES
 
-FROM alpine:3.11
+FROM registry.redhat.io/ubi8/ubi-minimal:8.6
 WORKDIR /bin
 
 COPY --from=builder /bin/persistence_agent /bin/persistence_agent
