--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,25 +1,13 @@
-FROM node:14.18.2 as build
+FROM registry.redhat.io/rhel8/nodejs-14:1-83 as build
 
-ARG COMMIT_HASH
-ENV COMMIT_HASH=${COMMIT_HASH}
-ARG TAG_NAME
-ENV TAG_NAME=${TAG_NAME}
-
-ARG DATE
-
-WORKDIR ./src
+USER root
 
 COPY . .
 
 WORKDIR ./frontend
 
-RUN npm ci && npm run postinstall
+RUN npm ci && npm run postinstall 
 RUN npm run build
-
-RUN mkdir -p ./server/dist && \
-    echo ${COMMIT_HASH} > ./server/dist/COMMIT_HASH && \
-    echo ${DATE} > ./server/dist/BUILD_DATE && \
-    echo ${TAG_NAME} > ./server/dist/TAG_NAME
 
 # Generate the dependency licenses files (one for the UI and one for the webserver),
 # concatenate them to one file under ./src/server
@@ -27,14 +15,19 @@ RUN npm i -D license-checker
 RUN node gen_licenses . && node gen_licenses server && \
     cat dependency-licenses.txt >> server/dependency-licenses.txt
 
-FROM node:14.18.2-alpine
+FROM registry.redhat.io/ubi8/nodejs-14-minimal:1-66
 
-COPY --from=build ./src/frontend/server /server
-COPY --from=build ./src/frontend/build /client
+RUN mkdir ./{server,client} && \
+    chown 1001:root ./{server,client}
 
-WORKDIR /server
+COPY --from=build /opt/app-root/src/frontend/server ./server
+COPY --from=build /opt/app-root/src/frontend/build ./client
+
+WORKDIR ./server
+
+USER 1001
 
 EXPOSE 3000
 RUN npm run build
 ENV API_SERVER_ADDRESS http://localhost:3001
-CMD node dist/server.js ../client/ 3000
+CMD node ./dist/server.js ../client/ 3000
