--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -29,36 +29,10 @@ RUN go-licenses csv ./backend/src/apiserver > /tmp/licenses.csv && \
     diff /tmp/licenses.csv backend/third_party_licenses/apiserver.csv && \
     go-licenses save ./backend/src/apiserver --save_path /tmp/NOTICES
 
-# 2. Compile preloaded pipeline samples
-FROM python:3.7 as compiler
-RUN apt-get update -y && apt-get install --no-install-recommends -y -q default-jdk python3-setuptools python3-dev jq
-RUN wget https://bootstrap.pypa.io/get-pip.py && python3 get-pip.py
-COPY sdk/python/requirements.txt .
-RUN python3 -m pip install -r requirements.txt --no-cache-dir
+# Remove sample_config.json file
+RUN rm /config/sample_config.json
 
-WORKDIR /go/src/github.com/kubeflow/pipelines
-COPY sdk sdk
-WORKDIR /go/src/github.com/kubeflow/pipelines/sdk/python
-RUN python3 setup.py install
-
-WORKDIR /
-COPY ./samples /samples
-COPY backend/src/apiserver/config/sample_config.json /samples/
-
-# Compiling the preloaded samples.
-# The default image is replaced with the GCR-hosted python image.
-RUN set -e; \
-    < /samples/sample_config.json jq .[].file --raw-output | while read pipeline_yaml; do \
-        pipeline_py="${pipeline_yaml%.yaml}.py"; \
-        pipeline_py="${pipeline_yaml%.yaml}.py"; \
-        mode=`< /samples/sample_config.json jq ".[] | select(.file == \"${pipeline_yaml}\") | (if .mode == null then \"V1\" else .mode end)" --raw-output`; \
-        mv "$pipeline_py" "${pipeline_py}.tmp"; \
-        echo 'import kfp; kfp.components.default_base_image_or_builder="gcr.io/google-appengine/python:2020-03-31-141326"' | cat - "${pipeline_py}.tmp" > "$pipeline_py"; \
-        dsl-compile-tekton --py "$pipeline_py" --output "$pipeline_yaml" || python3 "$pipeline_py"; \
-    done
-
-
-# 3. Start api web server
+# 2. Start api web server
 FROM debian:stable
 
 ARG COMMIT_SHA=unknown
@@ -74,7 +48,6 @@ COPY --from=builder /bin/apiserver /bin/apiserver
 # Copy licenses and notices.
 COPY --from=builder /tmp/licenses.csv /third_party/licenses.csv
 COPY --from=builder /tmp/NOTICES /third_party/NOTICES
-COPY --from=compiler /samples/ /samples/
 RUN chmod +x /bin/apiserver
 
 # Adding CA certificate so API server can download pipeline through URL and wget is used for liveness/readiness probe command
