Sync upstream changes.
These are various changes we had made in our downstream repos that
should have been sent to upstream first. This is part of our effort in
downstream to better synchronize with our upstream component repository.

Changes include updating python requirement/dependencies, and updating
various openshift yaml manifests for the dsp pipelines standalone.

Signed-off-by: Humair Khan <humair88@hotmail.com>

--- a/manifests/opendatahub/base/kustomization.yaml
+++ b/manifests/opendatahub/base/kustomization.yaml
@@ -89,11 +89,11 @@ configurations:
 
 images:
   - name: persistenceagent
-    newName: quay.io/internaldatahub/persistenceagent
-    newTag: 1.1.0
+    newName: quay.io/modh/odh-ml-pipelines-persistenceagent-container
+    newTag: v1.18.0-8
   - name: scheduledworkflow
-    newName: quay.io/internaldatahub/scheduledworkflow
-    newTag: 1.1.0
+    newName: quay.io/modh/odh-ml-pipelines-scheduledworkflow-container
+    newTag: v1.18.0-8
   - name: api-server
-    newName: quay.io/internaldatahub/api-server
-    newTag: 1.1.0
+    newName: quay.io/modh/odh-ml-pipelines-api-server-container
+    newTag: v1.18.0-8
