--- a/manifests/opendatahub/overlays/component-visualization-server/kustomization.yaml
+++ b/manifests/opendatahub/overlays/component-visualization-server/kustomization.yaml
@@ -3,31 +3,34 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
+  # Build Configs
+  - ./buildconfigs/visualization-server.yaml
+
   # CustomResourceDefinitions
-  - ./viewers.yaml
+  - ./customresourcedefinitions/viewers.yaml
 
   # Deployments
-  - ./ds-pipeline-viewer-crd-deployment.yaml
-  - ./ds-pipeline-visualizationserver-deployment.yaml
+  - ./deployments/ds-pipeline-viewer-crd.yaml
+  - ./deployments/ds-pipeline-visualizationserver.yaml
 
   # Rolebindings
-  - ./ds-pipeline-viewer-crd-binding.yaml
+  - ./rolebindings/ds-pipeline-viewer-crd-binding.yaml
 
   # Roles
-  - ./ds-pipeline-viewer-controller-role.yaml
+  - ./roles/ds-pipeline-viewer-controller-role.yaml
 
   # ServiceAccounts
-  - ./ds-pipeline-viewer-crd-sa.yaml
-  - ./ds-pipeline-viewer-sa.yaml
-  - ./ds-pipeline-visualizationserver-sa.yaml
+  - ./serviceaccounts/ds-pipeline-viewer-crd-service-account.yaml
+  - ./serviceaccounts/ds-pipeline-viewer.yaml
+  - ./serviceaccounts/ds-pipeline-visualizationserver.yaml
+
+  # Image Streams
+  - ./imagestreams/visualization-server.yaml
 
   # Services
-  - ./ds-pipeline-visualizationserver-svc.yaml
+  - ./services/ds-pipeline-visualizationserver.yaml
 
 images:
   - name: viewer-crd-controller
     newName: gcr.io/ml-pipeline/viewer-crd-controller
-    newTag: 1.7.0
-  - name: visualization-server
-    newName: gcr.io/ml-pipeline/visualization-server
     newTag: 1.7.0
