--- a/manifests/opendatahub/overlays/component-visualization-server/deployments/ds-pipeline-visualizationserver.yaml
+++ b/manifests/opendatahub/overlays/component-visualization-server/deployments/ds-pipeline-visualizationserver.yaml
@@ -1,6 +1,10 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  annotations:
+    alpha.image.policy.openshift.io/resolve-names: 'visualization-server:1.3.1'
+    image.openshift.io/triggers: >-
+      [{"from":{"kind":"ImageStreamTag","name":"visualization-server:1.3.1"},"fieldPath":"spec.template.spec.containers[?(@.name==\"ml-pipeline-visualizationserver\")].image"}]
   labels:
     app: ds-pipeline-visualizationserver
     application-crd-id: data-science-pipelines
@@ -18,6 +22,23 @@ spec:
         app: ds-pipeline-visualizationserver
         application-crd-id: data-science-pipelines
     spec:
+      initContainers:
+        - name: image-checker
+          image: 'quay.io/modh/odh-deployer:v1.15.0-10-rhods'
+          command:
+            - sh
+            - '-c'
+            - |
+              while :
+              do
+                TEST=$(oc get istag visualization-server:1.3.1 | wc -l)
+
+                if [[ $TEST -gt 0 ]]; then
+                  break
+                fi
+                echo "Image is not built yet, please wait..."
+                sleep 30
+              done
       containers:
         - image: visualization-server
           imagePullPolicy: Always
