fix namespace values in DSPv2 manifests

--- a/manifests/opendatahub/base/clusterrolebindings/ds-pipeline-persistenceagent.yaml
+++ b/manifests/opendatahub/base/clusterrolebindings/ds-pipeline-persistenceagent.yaml
@@ -11,4 +11,4 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: ds-pipeline-persistenceagent
-    namespace: $(namespace)
+    namespace: data-science-pipelines-v2
