--- a/manifests/opendatahub/base/clusterrolebindings/ds-pipeline-tekton-driver.yaml
+++ b/manifests/opendatahub/base/clusterrolebindings/ds-pipeline-tekton-driver.yaml
@@ -9,7 +9,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: kfp-driver
-    namespace: openshift-pipelines
+    namespace: data-science-pipelines-v2
 roleRef:
   kind: ClusterRole
   name: kfp-driver-cluster-access
