--- a/manifests/opendatahub/base/deployments/ds-pipeline-scheduledworkflow.yaml
+++ b/manifests/opendatahub/base/deployments/ds-pipeline-scheduledworkflow.yaml
@@ -29,6 +29,8 @@ spec:
                 configMapKeyRef:
                   key: cronScheduleTimezone
                   name: $(pipeline_install_configuration)
+            - name: LOG_LEVEL
+                value: $(LOG_LEVEL)
           image: scheduledworkflow
           imagePullPolicy: IfNotPresent
           name: ds-pipeline-scheduledworkflow
