--- a/manifests/opendatahub/base/params.env
+++ b/manifests/opendatahub/base/params.env
@@ -3,3 +3,4 @@ pipeline_install_configuration=pipeline-install-config
 ds_pipelines_configuration=ds-pipeline-config
 database_secret=mysql-secret
 ds_pipelines_ui_configuration=ds-pipeline-ui-configmap
+LOG_LEVEL=info
