Update repo references to dsp-tekton

--- a/.github/workflows/build-prs.yml
+++ b/.github/workflows/build-prs.yml
@@ -207,8 +207,8 @@ jobs:
 
           ```bash
           cd $(mktemp -d)
-          git clone git@github.com:opendatahub-io/data-science-pipelines.git
-          cd data-science-pipelines/
+          git clone git@github.com:opendatahub-io/data-science-pipelines-tekton.git
+          cd data-science-pipelines-tekton/
           git fetch origin pull/${{ needs.fetch-data.outputs.pr_number }}/head
           git checkout -b pullrequest ${{ env.SOURCE_BRANCH }}
           oc apply -f dspa.pr-${{ needs.fetch-data.outputs.pr_number}}.yaml
